:bug: Align top border closes #144

--- a/frontend/themes/komunumo/views/website/twitter-feed.css
+++ b/frontend/themes/komunumo/views/website/twitter-feed.css
@@ -18,6 +18,7 @@
 
 .website .twitter-feed {
     border-top: 2px solid #bfbfbf;
+    margin-top: 16px;
     margin-left: 0;
     width: 300px;
 }
